style: fix alignment of boxes

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+
+body {
+    line-height: 2;
+}
+
 #one {
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
@@ -19,12 +24,17 @@
     width: 180px;
     font-family: "Proxima Nova";
     max-height: 25px;
-    padding-left: 2px;
-    padding-right: 2px;
-    padding-top: 6px;
     padding-bottom: 6px;
     overflow: hidden;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.wrap.bottom {
+    border-top: 1px solid grey;
+    border-left: .5px solid grey;
+}
+
+.wrap.top {
+    border-left: .5px solid grey;
 }
 
 .Child {
@@ -37,7 +47,8 @@
 }
 
 .hover:hover {
-    background: #f5f3f1;
+    background: #e9ecf1;
+    width: 100%;
 }
 
 ul {
@@ -52,6 +63,8 @@ li {
 span {
     font-size: 11px;
     position: absolute;
-    top: 25%;
-    right: 12px;
+    top: 15%;
+    right: 7%;
 }
+
+
